# pi-collisions-simulator

./: Cargo.toml  README.md  shell.nix
src/: collisions.rs  main-anim-sound.rs  main-anim.rs  main-cli.rs
